# AgentSchool

./: .gitignore  CONTRIBUTING.md  README.md  demo.txt  pyproject.toml
ohmo/: __init__.py  cli.py  runtime.py  workspace.py
ohmo/gateway/: runtime.py
scripts/: e2e_smoke.py  install.ps1  install.sh  install_dev.sh  local_system_scenarios.py  run_task_skill.sh  test_cli_flags.py  test_runtime_features.py
src/agentschool/: __main__.py  cli.py  learning.py
src/openharness/: cli.py
tests/: conftest.py  test_learning.py  test_platforms.py
tests/test_api/: test_client.py  test_codex_client.py  test_copilot_auth.py  test_copilot_client.py  test_openai_client.py
tests/test_auth/: test_external.py
tests/test_bridge/: test_core.py  test_session_flow.py
tests/test_commands/: test_cli.py  test_command_flows.py  test_registry.py
tests/test_config/: test_output_styles_loader.py  test_paths.py  test_settings.py
tests/test_coordinator/: test_agent_definitions.py  test_coordinator_mode.py  test_registry.py
tests/test_engine/: test_messages.py  test_query_engine.py
tests/test_entrypoints/: test_no_stdlib_types_shadowing.py
tests/test_hooks/: test_executor.py
tests/test_logging/: test_format_strings.py
tests/test_mcp/: test_client_errors.py  test_http_flow.py  test_integration.py  test_stdio_flow.py
tests/test_memory/: test_memdir.py
tests/test_ohmo/: test_gateway.py
tests/test_permissions/: test_checker.py
tests/test_plugins/: test_lifecycle_flow.py  test_loader.py
tests/test_prompts/: test_claudemd.py  test_environment.py  test_system_prompt.py
(+206 files in other folders)
